@@ -379,8 +379,14 @@ line:
 	|
 	label_concat statement
 	{
-	  if (asm_enabled() && (state.lst.line.linetype == none))
-	    state.lst.line.linetype = insn;
+	  if (asm_enabled() && (state.lst.line.linetype == none)) {
+	    if ((state.mode == relocatable) &&
+                (SECTION_FLAGS & (STYP_BSS | STYP_DATA)))
+          /* alias to next definition */
+          state.lst.line.linetype = res;
+        else
+	      state.lst.line.linetype = insn;
+	  }
 	  
 	  if (asm_enabled()) {
 	    if (state.mac_head) {
